@@ -16,6 +16,7 @@ mlr_2.4:
 - tuneIrace: allows to set the precision / digits within irace (using the argument 'digits'
   in makeTuneControlIrace); default is maximum precision
 - generateLearningCurve and plotLearningCurve helps to plot the learning curve demonstrating how the performance increases with more observations.
+- plotROCRCurves has been rewritten to use ggplot2
 
 - new learners:
 -- classif.bst
